tests/sksl/errors/StaticSwitchConditionalBreak.glsl

out vec4 sk_FragColor;
